<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>MiraiMC</artifactId>
        <groupId>io.github.dreamvoid</groupId>
        <version>1.9.2</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>MiraiMC-Sponge</artifactId>

    <name>${project.artifactId}</name>
    <description>Mirai for Minecraft server</description>
    <url>https://github.com/DreamVoid/MiraiMC</url>

    <licenses>
        <license>
            <name>GNU Affero General Public License v3.0</name>
            <url>https://www.gnu.org/licenses/agpl-3.0.html</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>DreamVoid</name>
            <email>i@dreamvoid.me</email>
            <organization>DreamVoid</organization>
            <organizationUrl>https://github.com/DreamVoid</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/DreamVoid/MiraiMC.git</connection>
        <developerConnection>scm:git:ssh://github.com:DreamVoid/MiraiMC.git</developerConnection>
        <url>https://github.com/DreamVoid/MiraiMC</url>
    </scm>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>sponge-repo</id>
            <name>Sponge Maven Repository</name>
            <url>https://repo.spongepowered.org/maven</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.github.dreamvoid</groupId>
            <artifactId>MiraiMC-Base</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.spongepowered</groupId>
            <artifactId>spongeapi</artifactId>
            <version>8.0.0</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>4.0.3</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <minimizeJar>true</minimizeJar>
                    <!--
                    <relocations>
                        <relocation>
                            <pattern>org.apache</pattern>
                            <shadedPattern>me.dreamvoid.miraimc.libraries.org.apache</shadedPattern>
                        </relocation>
                    </relocations>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>mozilla/public-suffix-list.txt</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    -->
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <copy file="${project.build.directory}/MiraiMC-Sponge.jar" tofile="../target/MiraiMC-Sponge.jar"/>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.google.code.maven-replacer-plugin</groupId>
                <artifactId>replacer</artifactId>
                <version>1.5.3</version>
                <executions>
                    <execution>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>replace</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <basedir>${project.build.directory}</basedir>
                    <includes>
                        <include>classes/META-INF/sponge_plugins.json</include>
                    </includes>
                    <replacements>
                        <replacement>
                            <token>PROJECT\.VERSION\"</token>
                            <value>${project.parent.version}\"</value>
                        </replacement>
                    </replacements>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>